[package]
name = "roml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.10"
nalgebra = { version = "0.31.1", default-features = false, features = [ "libm" ] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
approx         = { version = "0.5", default-features = false }
assert_approx_eq = "1.1.0"